add methods created_by and updated_by

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,15 @@
 = ActsAsLogger
 
 This project rocks and uses MIT-LICENSE.
+
+= Usage
+
+class Post
+  include Mongoid::Document
+  include ActsAsLogger::Logger
+  
+  acts_as_logger
+  
+  field :title, :type => String
+  field :content, :type => String
+end
